--- a/TachyonPak/TachyonPak.csproj
+++ b/TachyonPak/TachyonPak.csproj
@@ -47,6 +47,7 @@
     <Compile Include="TachPAK.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TachyonPakStruct.cs" />
+    <Compile Include="_3DObjectConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
